gap fixed

--- a/src/scss/key-feature.scss
+++ b/src/scss/key-feature.scss
@@ -6,7 +6,7 @@
 .features-swiper {
     width: 100%; 
     overflow: hidden;
-    height: 700px; 
+    height: 600px; 
     position: relative;
     display: flex;
     justify-content: center;
@@ -46,7 +46,7 @@ background-color: #2D75E2;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 4px;
+    gap: 18px;
     @include media(desktop) {
 flex-direction: row;    
 width: fit-content;  
